compiler/w_session/tests/errors/pointer-type.stderr
tests/errors/pointer-type.w:1:12: error: type mismatch
fn main(): *i32 {}
           ^^^^
